k8s/apps/snmp-exporter/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: snmp-exporter
  namespace: monitoring
spec:
  egress:
    - ports:
        - port: 161
          protocol: UDP
      to:
        - ipBlock:
            cidr: 192.168.0.1/32
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.prometheus
      ports:
        - port: 9116
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: snmp-exporter
      app.kubernetes.io/name: prometheus-snmp-exporter
  policyTypes:
    - Ingress
    - Egress
